tests/neg/type_mismatch/src/main/scala/Main.scala
@main def app(): Unit =
  val x: Int = "hello"  // String assigned to Int
  println(x)
